--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
@@ -61,6 +62,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.58",
+    "@types/react-day-picker": "^5.2.1",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
