--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
@@ -43,20 +43,24 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.5.2",
     "jose": "^5.2.2",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.3.0",
     "nanoid": "^5.0.6",
-    "next": "13.5.1",
+    "next": "latest",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "react": "^18",
     "react-day-picker": "^9.5.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "recharts": "^2.9.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
