--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@next/swc-wasm-nodejs": "13.5.1",
-    
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -47,7 +46,10 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.5.2",
+    "input-otp": "^1.4.2",
     "jose": "^5.2.2",
     "lucide-react": "^0.344.0",
     "mongodb": "^6.3.0",
@@ -59,12 +61,13 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-resizable-panels": "^3.0.5",
     "recharts": "^2.9.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "cmdk": "^0.2.0",
-    "date-fns": "^2.30.0"
+    "vaul": "^1.1.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -76,7 +79,6 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "13.5.1",
     "postcss": "^8.4.35",
-    
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
