example env file added

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
 # Copy this file to `.env.local` for local development
-# On Vercel, add these in Project Settings → Environment Variables
 
 # MongoDB connection string
-# Example (MongoDB Atlas): mongodb+srv://<username>:<password>@<cluster>/<db>?retryWrites=true&w=majority
+# Replace <username>, <password>, <cluster>, and <db> with your own values
 MONGODB_URI="mongodb+srv://<username>:<password>@<cluster>/<db>?retryWrites=true&w=majority"
 
 # NextAuth secret for signing JWTs (use a strong random string)
-# Generate locally: openssl rand -base64 32
 NEXTAUTH_SECRET="replace-with-a-strong-random-string"
 
 # Base URL of the app
 # Local dev:
 NEXTAUTH_URL="http://localhost:3000"
-# On Vercel, set to your deployed URL, e.g. https://artify-yourname.vercel.app
+# On Vercel, set to your deployed URL
+
+# Public base URL fallback used by sitemap/robots when NEXTAUTH_URL is not set
+# Keep this in sync with your local/dev URL; on Vercel prefer setting NEXTAUTH_URL.
+# Can be ignored if nextauth_url is set.
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
