--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Replace <username>, <password>, <cluster>, and <db> with your own values
 MONGODB_URI="mongodb+srv://<username>:<password>@<cluster>/<db>?retryWrites=true&w=majority"
 
+# Optional: override the database name if you use a shared cluster
+# Defaults to "artify" when not set
+MONGODB_DB_NAME="artify"
+
 # NextAuth secret for signing JWTs (use a strong random string)
 NEXTAUTH_SECRET="replace-with-a-strong-random-string"
 
