--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "lucide-react": "^0.344.0",
     "mongodb": "^6.3.0",
     "nanoid": "^5.0.6",
-    "next": "latest",
+    "next": "16.1.6",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "^18",
